# chimera-discovery-lab

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  experiment.yml  hypothesis.yml
.github/rulesets/: protected-research-branches.json
.github/workflows/: ci.yml  codeql.yml
datasets/: ai_review_policy.yaml
docs/: ACTION_RANKING_H016.md  AI_DATASET_VALIDATION.md  ARCHITECTURE.md  BUSINESS_GRAPH_SEMANTICS.md  CLOSED_LOOP_H003.md  COMPOSITIONAL_WORLD_TRANSFER_H018.md  COUNTERFACTUAL_HEAD_H008.md  DATA_CONTRACT.md  FACTORIZED_TRANSITION_H013.md  GOVERNANCE.md  GPU_SETUP.md  INTERVENTION_SEARCH_H015.md  META_WORLD_W0.md  MODEL_REGISTRY.md  PROCEDURAL_PRETRAINING_H012.md  REPRODUCIBILITY.md  RESEARCH_JOURNAL.md  RESEARCH_PROTOCOL.md  RESPONSE_CONDITIONED_EFFECT_H014.md  RESPONSE_CONSISTENCY_H011.md  SHARED_BOTTLENECK_H010.md  SUPPORT_POOL_H017.md  WORLD_GENERATORS_H002.md  WORLD_GENERATORS_H009.md  WORLD_PROBES_H004.md
notebooks/: meta_world_corpus_c0_quality.ipynb  venture_corpus_c1_quality.ipynb
research/: registry.yaml
scripts/: build_meta_world_c0_notebook.py  build_venture_c1_notebook.py  diagnose_meta_world_ensemble.py  diagnose_meta_world_gradient_conflict.py  profile_venture_corpus.py  profile_venture_evaluation.py  profile_venture_targets.py
tests/: conftest.py  test_ai_review_gate.py  test_cli.py  test_config.py  test_contracts.py  test_corpus.py  test_evaluation_corpus.py  test_generation.py  test_h002.py  test_h003.py  test_h004.py  test_h005.py  test_h006.py  test_h007.py  test_h008.py  test_h009.py  test_h010.py  test_h011.py  test_h012.py  test_h013.py  test_h014.py  test_h015.py  test_h016.py  test_h017.py  test_h018.py  test_meta_world.py  test_meta_world_corpus.py  test_model.py  test_proposal.py  test_research.py  test_review_gate.py  test_semantics.py  test_target_quality.py  test_training.py  test_trial.py  test_world_generators.py
(+393 files in other folders)
